# julius

./: .gitignore  meson.build
gramtools/: meson.build
gramtools/accept_check/: meson.build
gramtools/dfa_determinize/: meson.build
gramtools/dfa_minimize/: meson.build
gramtools/generate/: meson.build
gramtools/gram2sapixml/: meson.build
gramtools/mkdfa/: meson.build
gramtools/mkdfa/mkfa-1.44-flex/: meson.build
gramtools/nextword/: meson.build  nextword.h
gramtools/subprojects/: libsent
gramtools/yomi2voca/: meson.build
julius/: meson.build
libjulius/: meson.build
libjulius/include/julius/: callback.h  recog.h  wchmm.h
libjulius/src/: plugin.c  recogmain.c  search_bestfirst_v1.c
libsent/: meson.build  meson_options.txt
libsent/src/phmm/: calc_dnn.c
subprojects/: gramtools
